style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

* {
    box-sizing: border-box;
}

body {
    margin: 0;
    font-family: "Roboto", sans-serif;
}

a {
    text-decoration: none;
    color: inherit;
}

button {
    border: none;
    color: inherit;
}

.container {
    display: flex;
    flex-direction: column;
}

.hero {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    background-color: #1f2937;
    color: #e5e7eb;
}

.header, .hero-main {
    display: flex;
    flex: 0 1 70%;
    justify-content: space-between;
    align-items: center;
}

.header-title, .hero-main-content-title, .hero-main-content-button {
    color: #f9faf8;
    font-weight: 900;
}

.header-title {
    font-size: 24px;
}

.header-nav-list {
    display: flex;
    align-items: stretch;
}

.header-nav, .hero-main-content-text, .hero-main-content-button {
    font-size: 18px;
}

.header-nav {
    padding: 16px 8px;
}

.hero-main {
    gap: 32px;
    margin: 64px 0;
}

.hero-main-content, .information, .information-gallery-item, .quo {
    display: flex;
    flex-flow: column wrap;
}

.hero-main-content-title {
    font-size: 48px;
}

.hero-main-content-text {
    white-space: pre-wrap;
}

.hero-main-content-button {
    max-width: fit-content;
    background-color: #3882f6;
    border-radius: 8px;
    padding: 8px 32px;
    margin-top: 8px;
}

.hero-main-image {
    flex: 1 1 50%;
    max-width: 50%;
    max-height: 50%;
}

.information {
    justify-content: center;
    align-items: center;
    padding: 32px 0 64px;
    color: #1f2937;
    gap: 32px;
}

.information-title {
    font-size: 36px;
    font-weight: 900;
}

.information-gallery {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 32px;
}

.information-gallery-item {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    flex: 0 1 150px;
    gap: 8px;
}

.information-gallery-item-image {
    border: 3px solid #3882f6;
    width: 128px;
    height: 128px;
    border-radius: 8px;
}

.information-gallery-item-text {
    text-align: center;
}

.quotation {
    display: flex;
    flex-flow: column wrap;
    justify-content: center;
    align-items: center;
    background-color: #e5e7eb;
    color: #1f2937;
    padding: 96px 0 64px;
}

.quotation-quote {
    font-size: 36px;
    font-style: italic;
    font-weight: lighter;
    max-width: 60%;
}

.quotation-quoter {
    font-weight: 900;
    font-size: 18px;
    font-style: normal;
    text-align: right;
    padding-right: 32px;
}

